--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.application.name=Peliculas
 server.port=8090
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.cache.type=redis
+# Habilitar logs de caché para Spring
+logging.level.org.springframework.cache=DEBUG
+logging.level.org.springframework.cache.interceptor=DEBUG
