Readme prometheus y grafana

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.cache.type=redis
 # Habilitar logs de caché para Spring
 logging.level.org.springframework.cache=DEBUG
 logging.level.org.springframework.cache.interceptor=DEBUG
+# Exponer solo los endpoints necesarios
+management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoint.prometheus.enabled=true
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+management.metrics.distribution.percentiles-histogram.db.query=true
+spring.datasource.hikari.metrics.enabled=true
